# flutter_slint_bridge

./: generate.bat  readme.md
fsb/: .flutter_rust_bridge.yml  .gitignore  Cargo.toml  build.rs  tray.rc
fsb/c_output_path/: c_output.h
fsb/c_output_path_extra/: c_output.h
fsb/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
fsb/src/dialog/: about_dialog.rs  auto_close_dialog.rs  confirm_dialog.rs  mod.rs  notification.rs  warning_dialog.rs
fsb/src/event_loop/: mod.rs  model.rs  pin_window_wrapper.rs  tray.rs  utils.rs
fsb/src/form/: draggable_notification.rs  mod.rs  pin_window.rs
fsb/src/message/: mod.rs
fsb/src/tests/: mod.rs
fsb/src/ui/: default_listview_item.slint  dropdown.slint  listtile.slint  loading.slint  pin_window.slint  tricks.slint
fsb/src/utils/: mod.rs
fsb_dart/: pubspec.yaml
fsb_dart/lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  lib.dart
fsb_multi_window/: Cargo.toml  build.rs
fsb_multi_window/src/: main.rs
fsb_multi_window/src/UI/: tip.slint
fsb_multi_window/src/tests/: mod.rs
fsb_multi_window/src/tools/: mod.rs
proto/: runapp.proto
