[package]
name = "fsb"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
anyhow = "1.0.66"
flutter_rust_bridge = "= 1.82.6"
lazy_static = "1.4.0"
open = "5"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.108"
slint = "1.3.2"
tao = "0.24.0"
# tray-item = "0.9.0"
# tray-item = {path = "D:/github_repo/tray-item-rs"}

[build-dependencies]
flutter_rust_bridge_codegen = "= 1.82.6"
slint-build = "1.3.2"
# embed-resource = "2.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
