[package]
name = "fsb_multi_window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
once_cell = "1.18.0"
prost = "0.12"
slint = "1.3.2"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.0"


[build-dependencies]
slint-build = "1.3.2"
tonic-build = "0.10.0"